# TelecomDomainFineTuning

./: .gitignore  README.md  main.py  pyproject.toml
src/telecom_dataset_generator/: __init__.py  generator.py
src/telecom_dataset_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_output/: dataset_stats.json  telecom_test.jsonl  telecom_train.jsonl
