[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-dataset-generator"
version = "1.0.0"
description = "Generate realistic synthetic datasets for telecom customer service chatbot training"
authors = [{name = "Nijesh", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "faker>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/knijesh/TelecomDomainFineTuning"
Repository = "https://github.com/knijesh/TelecomDomainFineTuning"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]